--- a/BlazorEcommerce/Client/wwwroot/css/app.css
+++ b/BlazorEcommerce/Client/wwwroot/css/app.css
@@ -62,3 +62,13 @@ a, .btn-link {
     .blazor-error-boundary::after {
         content: "An error has occurred."
     }
+
+
+.media {
+    display: flex;
+    align-items: flex-start;
+}
+
+.media-body {
+    flex: 1;
+}
